# code-story

./: .codestory.container.toml  .codestory.default.toml  .codestory.toml  .codestory.toml.demo  .docker_service_build_hash  .editorconfig  .env-template  .env.example  .env.minimal  .env.prod  .env.template  .eslintrc.json  .ggignore  .gitallowed  .gitguardian.yaml  .gitguardian.yml  .gitguardianignore  .gitignore  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  .uv  CLAUDE.MD  CLI_DEMO_EXECUTION_PLAN.md  CLI_DEMO_TASK_BREAKDOWN.md  CLI_DEMO_TEST_PLAN.md  DEVCONTAINER_CODESPACES_FIX.md  DOCKER_CONNECTIVITY_FIX_SUMMARY.md  Dockerfile.service  Dockerfile.worker  FIXED_CI_TESTS.md  FIXED_LLM_TESTS.md  LICENSE  PR_SUMMARY.md  README.md  TEST_ANALYSIS_AND_FIX_PLAN.md  TEST_ENV_README.md  TEST_FIXES_COMPLETED.md  TEST_FIXES_SUMMARY.md  azure.yaml  (+60 more)
.codespaces/: devcontainer.json
.codestory/: repository.toml
.devcontainer/: README.md  devcontainer.json  docker-compose.extend.yml  setup.sh
.github/: copilot-instructions.md
.github/Copilot-History/: prompt_history_2025-01-09_session.md  prompt_history_2025-05-29_12-00.md  prompt_history_2025-05-30_07-52_1.md  prompt_history_2025-05-30_08-19_66289202.md  prompt_history_2025-05-30_08-42_session.md  prompt_history_2025-05-30_09-15_fix-mypy-cleanup.md  prompt_history_2025-06-02_22-07_session.md  prompt_history_2025-06-04_12-14_session.md  prompt_history_2025-06-05_12-session001.md  prompt_history_2025-06-05_21-50_integration_tests.md  prompt_history_2025-06-05_session.md  shell_history_2025-01-09_session.md  shell_history_2025-05-29_12-00.md  shell_history_2025-05-30_07-52_1.md  shell_history_2025-05-30_08-19_66289202.md  shell_history_2025-05-30_08-42_session.md  shell_history_2025-05-30_09-15_fix-mypy-cleanup.md  shell_history_2025-06-02_22-07_session.md  shell_history_2025-06-04_12-14_session.md  shell_history_2025-06-05_21-50_integration_tests.md
.github/workflows/: ci.yml  docs.yml
.roo/rules-code/: 07-history-maintenance.md
Specifications/: backlog.md  prompt-history.md  prompt_history.md  shell_history.md  status.md
analysis/: mypy_remaining_stats.md
benchmarks/: benchmark_neo4j.py
code_story/: cli.py
config/: prometheus.yml
docs/: Makefile  architecture.md  conf.py  contributing.md  developer_guide.md  index.md  neo4j_schema.md  user_guide.md  uv-package-management.md
docs/_static/: custom.css
docs/api/: code_story_service.md  config.md  graphdb.md  index.md  ingestion_pipeline.md  mcp_adapter.md
docs/architecture/: components.md  index.md
docs/demos/: cli_demo.md  gui_demo.md  index.md  mcp_demo.md  visualization.html
docs/deployment/: azure_authentication.md  index.md  repository_mounting.md
docs/developer_guides/: authentication_resilience.md  azure_openai_client.md  celery_best_practices.md  ci_cd_troubleshooting.md  deployment_testing.md  disaster_recovery.md  index.md  ingestion_pipeline.md  mcp_adapter.md  summarizer_step.md
docs/user_guides/: cli_guide.md  configuration.md  index.md  installation.md  service_recovery.md
gui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
gui/demo/: run_demo.js
gui/src/: App.tsx  main.tsx  router.tsx  store.ts
infra/: README.md  azure-architecture.md  cross-tenant-openai.md  infrastructure.bicep  main.bicep  main.parameters.json
infra/azd/: README.md  abbreviations.json  infrastructure.bicep  main.json  template-env.env
infra/azure/: main.bicep  main.json
infra/docker/: Dockerfile.celery_worker  Dockerfile.codestory_service  Dockerfile.gui  Dockerfile.mcp_adapter  celery-worker.Dockerfile  gui.Dockerfile  mcp.Dockerfile  nginx.conf  service.Dockerfile  worker.Dockerfile
infra/scripts/: backup_neo4j.sh  build_push_acr.sh  create_test_deployment.sh  deploy_azure.sh  healthcheck.sh  restore_neo4j.sh  start.sh  stop.sh  test_deployment.sh
js/: README.md  package.json
records/: prompt_history.md  shell_history.md
scripts/: auto_add_any_annotations.py  auto_annotate_return_types.py  auto_ignore_assignment_errors.py  auto_ignore_attr_defined.py  auto_ignore_misc.py  auto_ignore_missing_stubs.py  auto_mount.py  auto_remove_unused_ignores.py  azure_auth_renew.py  backup_neo4j.sh  bootstrap.sh  celery_worker.py  check_azure_auth.py  check_ci_status.sh  check_env.py  deploy_azure.sh  import_neo4j.sh  inject_azure_tokens.py  mount_repository.sh  restore_neo4j.sh  run_celery.sh  run_cli_demo.sh  run_cli_demo_docker.sh  run_codestory_demo.sh  run_filesystem_test.py  run_filesystem_tests.sh  run_integration_tests.sh  run_openai_tests.sh  run_test_directly.py  setup_container_config.sh  setup_test_db.sh  setup_test_db_simple.sh  start_celery_worker.sh  start_project.sh  start_test_worker.sh  stop_project.sh  stop_test_db.sh  test_azure_openai.py  test_ingestion_pipeline.py  test_openai_client_comprehensive.py  (+1 more)
specs/: 00 Overview and Architecture.md  00 Scaffolding  00_overview.md  01 Graph Service.md  01_scaffolding.md  02 AI Client.md  03 Ingestion Pipeline.md  04 Code Summarizer.md  05 MCP adapter.md  06 CLI.md  07 GUI.md  08 Infra.md  09 Docs.md  Backlog.md  Main.md  code-story-spec-suite.md  coding-agent-backlog.md  coding-guidelines.md  decomposer_plan.md  methodology.md  session-history.md  session-initial-prompt.md  test-validation-report.md
specs/01-overview/: error-handling.md  overview.md
specs/02-scaffolding/: database-clear-feature.md  scaffolding.md
specs/03-configuration/: configuration.md
specs/04-graph-database/: graph-database.md
specs/05-ai-client/: ai-client.md
specs/06-ingestion-pipeline/: ingestion-pipeline-addendum.md  ingestion-pipeline.md
specs/07-blarify-step/: blarify-step.md
specs/08-filesystem-step/: filesystem-step-addendum.md  filesystem-step.md
specs/09-summarizer-step/: summarizer-step.md
specs/10-docgrapher-step/: docgrapher-step.md
specs/11-code-story-service/: code-story-service.md
specs/12-mcp-adapter/: mcp-adapter.md
specs/13-cli/: cli-addendum.md  (+3 more)
src/: __init__.py
tests/: conftest.py  conftest_celery_eager.py  conftest_docker_mock.py  test_scaffolding.py
(+404 files in other folders)
