[project]
name = "codestory"
version = "0.1.0"
description = ""
authors = [
    {name = "Ryan Sweet",email = "rysweet@microsoft.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.11.4,<3.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "typer[all] (>=0.15.3,<0.16.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "celery (>=5.5.2,<6.0.0)",
    "redis (>=6.0.0,<7.0.0)",
    "neo4j (>=5.28.1,<6.0.0)",
    "openai (>=1.77.0,<2.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "prometheus-client (>=0.21.1,<0.22.0)",
    "structlog (>=25.3.0,<26.0.0)",
    "opentelemetry-sdk (>=1.32.1,<2.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-cov = "^6.1.1"
testcontainers = {version = "^4.10.0", python = ">=3.12,<4.0"}
ruff = "^0.11.8"
mypy = "^1.15.0"
httpx = "^0.28.1"
pytest-mock = "^3.14.0"
testcontainers-neo4j = "^0.0.1rc1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
